<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="74dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="37dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/registerbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="327dp"
        android:text="@string/home_screen"
        android:textColor="#FFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/aboutbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_trail"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/managebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/managebtn"
        android:layout_width="194dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/manage_trails"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sharebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/share_trails"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/settingsbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managebtn" />

    <Button
        android:id="@+id/aboutbtn"
        android:layout_width="202dp"
        android:layout_height="0dp"
        android:layout_marginBottom="293dp"
        android:text="@string/about"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:cornerRadius="0dp" />

    <Button
        android:id="@+id/settingsbtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:text="@string/settings"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/aboutbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sharebtn" />
</androidx.constraintlayout.widget.ConstraintLayout>